Details
-
Bug
-
Resolution: Fixed
-
Major
Description
Request->DataBuffer
a)Check for failed allocation references wrong item
b)and that item not freed in various error paths
(Consider the patch merely a way to indicate the specific issues observed, than necessarily a submission as accurate text descxription would be harder. The observations appear valid against r73876, current HEAD at this writing, the revision 64030 just happened to be cleanest source I had to produce patch on a currently space constrained system.)
Attachments
Issue Links
- relates to
-
CORE-12970 Incorrect handling of allocated buffer
-
- Resolved
-