[USBSTOR] - Fix error paths around SCSI_REQUEST_BLOCK::DataBuffer. Spotted by curiousone. CORE-12816 #resolve

svn path=/trunk/; revision=73892